outside-kubesphere/yamls/ks-core/templates/ks-controller-manager.yaml
---
# Source: ks-core/templates/ks-controller-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-controller-manager
    tier: backend
    version: v3.1.0
  name: ks-controller-manager
  namespace: kubesphere-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: ks-controller-manager
    tier: backend
    # version: v3.1.0
  sessionAffinity: None
  type: ClusterIP
---
# Source: ks-core/templates/ks-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ks-controller-manager
    tier: backend
    version: v3.1.0
  name: ks-controller-manager
  namespace: kubesphere-system
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
    type: RollingUpdate
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ks-controller-manager
      tier: backend
      # version: v3.1.0
  template:
    metadata:
      labels:
        app: ks-controller-manager
        tier: backend
        # version: v3.1.0
    spec:
      containers:
      - command:
        - controller-manager
        - --logtostderr=true
        - --leader-elect=true
        - --kubeconfig=/etc/kubeconfig/kubeconfig
        image: kubesphere/ks-controller-manager:v3.1.0
        imagePullPolicy: IfNotPresent
        name: ks-controller-manager
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
            limits:
              cpu: 1
              memory: 1000Mi
            requests:
              cpu: 30m
              memory: 50Mi
        volumeMounts:
        - mountPath: /etc/kubesphere/
          name: kubesphere-config
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: webhook-secret
        - mountPath: /var/lib/kubelet/plugins/
          name: kubelet-plugin
        - mountPath: /etc/localtime
          name: host-time
        - mountPath: /etc/kubeconfig
          name: kubeconfig
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: kubesphere-config
          configMap:
            name: kubesphere-config
            defaultMode: 420
        - name: webhook-secret
          secret:
            defaultMode: 420
            secretName: ks-controller-manager-webhook-cert
        - name: kubelet-plugin
          hostPath:
            path: /var/lib/kubelet/plugins/
            type: DirectoryOrCreate
        - hostPath:
            path: /etc/localtime
            type: ""
          name: host-time
        - name: kubeconfig
          configMap:
            defaultMode: 420
            name: kubeconfig
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 60
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: In
                values:
                - ""
