outside-kubesphere/yamls/ks-core/templates/kubesphere-controls-system.yaml
---
# Source: ks-core/templates/kubesphere-controls-system.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: kubesphere
    component: kubesphere-router
  annotations:
    kubernetes.io/created-by: kubesphere.io/ks-router
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubesphere
    component: kubesphere-router
---
# Source: ks-core/templates/kubesphere-controls-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: kubesphere 
    component: kubesphere-router
    version: express-1.0.alpha
  annotations:
    kubernetes.io/created-by: kubesphere.io/ks-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubesphere
      component: kubesphere-router
  template:
    metadata:
      labels:
        app: kubesphere
        component: kubesphere-router
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        # Any image is permissible as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: mirrorgooglecontainers/defaultbackend-amd64:1.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
