outside-kubesphere/yamls/ks-core/templates/webhook.yaml
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: users.iam.kubesphere.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lSQUpnTmFMQWFVR0MyMzNmMlR4Q2ZUamt3RFFZSktvWklodmNOQVFFTEJRQXcKSXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0WVc1aFoyVnlMV05oTUI0WERUSXhNRFV5TkRFegpORGsxTVZvWERUTXhNRFV5TWpFek5EazFNVm93SXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0CllXNWhaMlZ5TFdOaE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBMFRDTVBaeHQKQmF6QnllR21ycm1teEsyd1VrdjFRWDdIODNLYlFEMkNab3lnV0RKL1NzM25INzJwYVd2UWU3SnRtbTVlN1JlRgpoMGNLV3ZWMmlER [...]
    service:
      name: ks-controller-manager
      namespace: kubesphere-system
      path: /validate-email-iam-kubesphere-io-v1alpha2
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: users.iam.kubesphere.io
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector: {}
  rules:
  - apiGroups:
    - iam.kubesphere.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: network.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lSQUpnTmFMQWFVR0MyMzNmMlR4Q2ZUamt3RFFZSktvWklodmNOQVFFTEJRQXcKSXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0WVc1aFoyVnlMV05oTUI0WERUSXhNRFV5TkRFegpORGsxTVZvWERUTXhNRFV5TWpFek5EazFNVm93SXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0CllXNWhaMlZ5TFdOaE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBMFRDTVBaeHQKQmF6QnllR21ycm1teEsyd1VrdjFRWDdIODNLYlFEMkNab3lnV0RKL1NzM25INzJwYVd2UWU3SnRtbTVlN1JlRgpoMGNLV3ZWMml [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-network-kubesphere-io-v1alpha1
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: validating-network.kubesphere.io
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector: {}
    rules:
      - apiGroups:
          - network.kubesphere.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ippools
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
---
# Source: ks-core/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: resourcesquotas.quota.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lSQUpnTmFMQWFVR0MyMzNmMlR4Q2ZUamt3RFFZSktvWklodmNOQVFFTEJRQXcKSXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0WVc1aFoyVnlMV05oTUI0WERUSXhNRFV5TkRFegpORGsxTVZvWERUTXhNRFV5TWpFek5EazFNVm93SXpFaE1COEdBMVVFQXhNWWEzTXRZMjl1ZEhKdmJHeGxjaTF0CllXNWhaMlZ5TFdOaE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBMFRDTVBaeHQKQmF6QnllR21ycm1teEsyd1VrdjFRWDdIODNLYlFEMkNab3lnV0RKL1NzM25INzJwYVd2UWU3SnRtbTVlN1JlRgpoMGNLV3ZWMml [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-quota-kubesphere-io-v1alpha2
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    name: resourcesquotas.quota.kubesphere.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
